@@ -1,5 +1,10 @@
 2000-05-29  Martin Baulig  <baulig@suse.de>
 
+	* gnome-autogen.sh: If `USE_GNOME_2_MACROS' is set, use the
+	GNOME 2.0 macros from the `macros2' directory.
+
+2000-05-29  Martin Baulig  <baulig@suse.de>
+
 	* gnome-common.m4, Makefile.am: Install macros to
 	`$(datadir)/aclocal/gnome-macros' when INSIDE_GNOME_COMMON.
 
